view and stuff commit where is a valid version

--- a/php_mvc/Views/TestController/Show.html
+++ b/php_mvc/Views/TestController/Show.html
@@ -1,7 +1,7 @@
 <div>
-<?php
-	foreach($viewModel as $current){
-		echo $current;
-	}
-?>
+	<p>Here we are in the index view!</p>
+	<p>Here we have p3 and p4  variables</p></br>
+	<p>
+		<?php echo "p3 = $p3, p4 = $p4"; ?>
+	</p>
 </div>
